@@ -1,0 +1,28 @@
+# 20220511: CM conf-call
+
+* Discussing next IC improvements for deterministic DevOps and MLOps:
+
+  * Changing CM_PATH_LIST to +PATH
+  * Adding general support for +ENV that is expanded to ENV=val1;val2;...:${ENV}
+
+  * Extending ic::prototype-detect-os:
+    * return ENV about OS flavor (macos, ubuntu, debian, centos)
+    * return ENV about OS ver (22.04)
+
+  * Extending ic::prototype-get-cpu-info:
+    * return host CPU type (x8664...)
+    * return host CPU flavor (m1)
+
+  * Adding support to specialize run.sh or run.bat based on above notes. Idea is to check scripts in the following order:
+    * run-${CM_OS_HOST_FLAVOR}-${CM_OS_HOST_VER}-${CM_CPU_FLAVOR}.sh
+    * run-${CM_OS_HOST_FLAVOR}-${CM_OS_HOST_VER}.sh
+    * run-${CM_OS_HOST_FLAVOR}.sh
+    * run.sh
+
+    Each script can call other scripst from the same IC automation
+
+    In the future, we can add support in customization.py to run numerous scripts inside 1 IC based on host OS, target OS, target CPU/GPU/TPU/DSP (run-UID.sh).
+
+  * Adding support to specialize run.sh for the target platform (GPU/DSP/TPU) - to be discussed further ...
+
+
